# AMROllie

./: .gitignore  LICENSE  README.md
MotionPlanner/docs/: README.md
MotionPlanner/src/: JoystickWebUI.h  MotionController.h  PIDController.h  main.cpp
MotorScan/: platformio.ini
MotorScan/docs/: README.md  implment.md
MotorScan/src/: IMotor.h  Motor.cpp  Motor.h  MotorScanner.cpp  MotorScanner.h  MotorSim.cpp  MotorSim.h  MotorWebUI.h  main.cpp
MotorTuner/src/: Motor.cpp  Motor.h  MotorSim.cpp  MotorSim.h  MotorWebUI.h  PIDController.cpp  PIDController.h  main.cpp
OdoTracker/: .gitignore  platformio.ini
OdoTracker/docs/: README.md
OdoTracker/src/: AngularVelocityController.h  JoystickWebUI.h  MotionController.h  Motor.cpp  PIDController.h  i2cScanner.cpp  main.cpp  mpu6050_test.cpp  statWebUI.h
PIDTest/docs/: README.md  implement.md
PIDTest/src/: Motor.cpp  MotorSim.cpp  MotorSim.h  MotorWebUI.h  PIDController.h  PIDTest.h  main.cpp
ROSBridge/: platformio.ini
ROSBridge/docs/: README.md
ROSBridge/src/: main.cpp
ReactiveBrake/: platformio.ini
ReactiveBrake/src/: AngularVelocityController.h  JoystickWebUI.h  MotionController.h  Motor.cpp  Motor.h  ReactiveBrake.h  config.h.default  main.cpp  main_ultrasonic_test.cpp
firmware/: platformio.ini
firmware_standalone/: platformio.ini
host/: .gitignore  run_docker.sh
host5b/ros2_ws/src/ollie_description/: CMakeLists.txt  readme.md  run_launch
host5b/ros2_ws/src/ollie_description/launch/: ollie_visual.launch.py
host5b/ros2_ws/src/ollie_description/scripts/: real_ollie_core.py
(+135 files in other folders)
