cmake_minimum_required(VERSION 3.8)
project(ollie_description)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

# 告訴編譯器要安裝這些資料夾
install(DIRECTORY
  urdf
  launch
  DESTINATION share/${PROJECT_NAME}
)

# 安裝 Python 執行檔
install(PROGRAMS
  scripts/fake_ollie_core.py
  DESTINATION lib/${PROJECT_NAME}
)

install(PROGRAMS
  scripts/fake_ollie_core.py
  scripts/real_ollie_core.py
  DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
